Did stuff. Not done yet

--- a/PlannedWaterfall/PlannedWaterfall/Content/style.css
+++ b/PlannedWaterfall/PlannedWaterfall/Content/style.css
@@ -541,15 +541,6 @@ h6 {
 .dropdown:hover .dropbtn {
   background-color: #3e8e41; }
 
-@media all and (max-width: 1250px) {
-  .rowDisplayDiv {
-    flex-direction: column; }
-
-  .columnDisplayDiv {
-    flex-direction: row; } }
-@media all and (max-width: 750px) {
-  html {
-    width: 750px; } }
 li {
   border: 2px solid #2980B9; }
 
@@ -567,5 +558,32 @@ li {
 
 .rightDivFlex {
   background-color: #20638f; }
+
+.inlineNav {
+  margin-top: 10px; }
+  .inlineNav ul li, .inlineNav ol li {
+    display: inline;
+    float: left;
+    margin-right: 12px;
+    margin-bottom: 12px;
+    padding: 5px 3px;
+    font-size: 1.5em;
+    box-shadow: 5px 5px #a1a1a1;
+    margin-top: 5px; }
+    .inlineNav ul li a, .inlineNav ol li a {
+      display: block; }
+
+table {
+  margin: 10px auto; }
+
+.contentBlock {
+  border: 2px solid #2C3E50; }
+
+@media all and (max-width: 580px) {
+  html {
+    min-width: 580px;
+    max-width: 580px; } }
+th, tr, td, table {
+  border: 2px solid #2980B9; }
 
 /*# sourceMappingURL=style.css.map */
