Changed some html

--- a/PlannedWaterfall/PlannedWaterfall/Views/Home/ToExcel.cshtml
+++ b/PlannedWaterfall/PlannedWaterfall/Views/Home/ToExcel.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PlannedWaterfall.Models.ToExcelModel
 @{
-    ViewBag.Title = "ToExcel";
+    ViewBag.Title = "ExcelWorksheet";
 }
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -8,7 +8,7 @@
     <title></title>
 </head>
 <body>
-    <h2>ToExcel</h2>
+    <h2>Excel Worksheet</h2>
     @{
         int lowTotal = 0;
         int expectedTotal = 0;
