--- a/PlannedWaterfall/PlannedWaterfall/Views/Home/Index.cshtml
+++ b/PlannedWaterfall/PlannedWaterfall/Views/Home/Index.cshtml
@@ -3,29 +3,26 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Planned Project</h1>
+    <p class="lead">
+        Creating a Planned Project includes determining exactly what 
+        tasks must be completed, how long they will take, and how much 
+        time your group/organization is willing to commit.
+        <br />
+        One example of a Planned Project Methodology is the Waterfall Model.
+    </p>
+    <p><a href="https://en.wikipedia.org/wiki/Waterfall_model" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Go to the Edit Excel Page. Here you can add new feature entries into the excel worksheet. 
+            The worksheet will take your estimates and come up with a weighted average.
+            This average can be used to get a good estimate of how long each task will take.
+            At the top there is a Totals table that will show you an estimation of how long the project will take.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://en.wikipedia.org/wiki/Weighted_arithmetic_mean">Learn more &raquo;</a></p>
     </div>
 </div>
