--- a/PlannedWaterfall/PlannedWaterfall/Views/Shared/_Layout.cshtml
+++ b/PlannedWaterfall/PlannedWaterfall/Views/Shared/_Layout.cshtml
@@ -12,8 +12,9 @@
         <div class="rowDisplayDiv">
             <div class="inlineNav">
                 <ul>
-                    <li>@Html.ActionLink("Excel Page View", "ToExcel", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
-                    <li>@Html.ActionLink("Edit Excel page", "Excelpage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("View Excel", "ToExcel", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("Edit Excel", "Excelpage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -22,7 +23,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Planned Project Application</p>
         </footer>
     </div>
 
