--- a/PlannedWaterfall/PlannedWaterfall/Content/scssFiles/_links.scss
+++ b/PlannedWaterfall/PlannedWaterfall/Content/scssFiles/_links.scss
@@ -1,4 +1,4 @@
-.inlineNav {
+/*.inlineNav {
     margin: 50px;
     ol {
         list-style-type: none;
@@ -27,4 +27,4 @@ a:hover {
 
 a:active {
 
-}
+}*/
