--- a/PlannedWaterfall/PlannedWaterfall/Content/style.scss
+++ b/PlannedWaterfall/PlannedWaterfall/Content/style.scss
@@ -17,7 +17,6 @@ li {
     // background-color: $secondary-color;
     // margin-right: 0px;
     // margin-left: 0px;
-    border: 2px solid $third-color;
 }
 
 .divFlex {
@@ -42,7 +41,7 @@ li {
     background-color: $thirdDark;
 }
 
-.inlineNav{
+/*.inlineNav{
             margin-top: 10px;
             // height: 45px;
     ul, ol {
@@ -63,7 +62,7 @@ li {
             }
         }
     }
-}
+}*/
 
 table {
     margin: 10px auto;
@@ -80,6 +79,39 @@ table {
     }
 }
 
-th, tr, td, table {
-    border: 2px solid $third-color;
+tr, td {
+    border: 2px solid ;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
+.otherStuff {
+    padding-right: 650px;
+}
+
+ul {
+margin-bottom: 50px;
+}
+
