Added Home Page

--- a/PlannedWaterfall/PlannedWaterfall/Views/Shared/_Layout.cshtml
+++ b/PlannedWaterfall/PlannedWaterfall/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
             <div class="inlineNav">
                 <div class="rowDisplayDiv">
                     <ul class="otherStuff">
+                        <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                         <li>@Html.ActionLink("Excel Page View", "ToExcel", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                         <li>@Html.ActionLink("Edit Excel page", "Excelpage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                     </ul>
