--- a/PlannedWaterfall/PlannedWaterfall/Views/Shared/_Layout.cshtml
+++ b/PlannedWaterfall/PlannedWaterfall/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
                 <div class="rowDisplayDiv">
                     <ul class="otherStuff">
                         <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
-                        <li>@Html.ActionLink("Excel Page View", "ToExcel", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
-                        <li>@Html.ActionLink("Edit Excel page", "Excelpage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li>@Html.ActionLink("View Excel", "ToExcel", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li>@Html.ActionLink("Edit Excel", "Excelpage", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
