--- a/PlannedWaterfall/PlannedWaterfall/Content/style.scss
+++ b/PlannedWaterfall/PlannedWaterfall/Content/style.scss
@@ -66,22 +66,17 @@ li {
 
 table {
     margin: 10px auto;
+    border-collapse: collapse;
+    background-color: #fff;
 }
 
-.contentBlock {
-   border: 2px solid $secondary-color;
-}
-
-@media all and (max-width: 580px) {
+@media all and (max-width: 685px) {
     html {
-        min-width: 580px;
-        max-width: 580px;
+        min-width: 685px;
+        max-width: 685px;
     }
 }
 
-tr, td {
-    border: 2px solid ;
-}
 
 ul {
     list-style-type: none;
@@ -107,11 +102,21 @@ li a:hover {
     background-color: #111;
 }
 
-.otherStuff {
-    padding-right: 550px;
-}
-
 ul {
 margin-bottom: 50px;
 }
 
+th, td {
+    border: 1px solid #808080;
+    margin: 0;
+}
+
+.rowDisplayDiv {
+    width: 100%;
+    margin: auto;
+    display: block;
+}
+
+.navbar-nav {
+    margin: 0;
+}
