--- a/PlannedWaterfall/PlannedWaterfall/Views/Home/ExcelPage.cshtml
+++ b/PlannedWaterfall/PlannedWaterfall/Views/Home/ExcelPage.cshtml
@@ -11,7 +11,7 @@
         ViewBag.Title = "ExcelPage";
     }
 
-    <h2>Excel Page</h2>
+    <h2>Add Feature/Estimates</h2>
     @using (Html.BeginForm("ToExcel", "Home", FormMethod.Post))
     {
         <div class="form-group">
